objects/Work_Request__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>Additional Information about the Work request</description>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_PMO_Comments__c</fullName>
        <description>Additional PMO Comments</description>
        <label>Additional PMO Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Stakeholder1_Email__c</fullName>
        <inlineHelpText>Enter the Email address of users to be notified in addition to the requester.</inlineHelpText>
        <label>Additional Stakeholder Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Stakeholder2_Email__c</fullName>
        <inlineHelpText>Enter the Email address of users to be notified in addition to the requester.</inlineHelpText>
        <label>Additional Stakeholder2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Stakeholder3_Email__c</fullName>
        <inlineHelpText>Enter the Email address of users to be notified in addition to the requester.</inlineHelpText>
        <label>Additional Stakeholder3 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Application_URL__c</fullName>
        <label>Application URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BCE_Resource_Assigned__c</fullName>
        <label>BCE Resource Assigned</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Biz_Resource_Skills_Set_Risk_Comments__c</fullName>
        <description>Business Resource Skills Set Risk</description>
        <label>Biz Resource Skills Set Risk Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bookings_Pipeline_Impacted__c</fullName>
        <description>Impact on incremental bookings or pipeline generated annually in millions</description>
        <inlineHelpText>Impact on incremental bookings or pipeline generated annually in millions</inlineHelpText>
        <label>Bookings / Pipeline Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>NA-Does not apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Analysis_Prioritization_Score__c</fullName>
        <label>Business Analysis Prioritization Score</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Analysis_Prioritization__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Analysis_Prioritization__c</fullName>
        <label>Business Analysis Prioritization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Benefits__c</fullName>
        <description>Describe the Business Benefits or Outcomes in terms of the following values levers: Revenue Growth, Cost Savings, Cost avoidance and Productivity.</description>
        <inlineHelpText>(Provide impact for enabling the needed capabilities. Consider cost savings, cost avoidance, sales enablement, ops enablement, operational or productivity metrics, revenue impacting, etc.)</inlineHelpText>
        <label>Business Justification Inputs</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Impacts__c</fullName>
        <inlineHelpText>Describe the impacts that this request will have on the business.</inlineHelpText>
        <label>Business Impacts</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Need_Problem_Statement__c</fullName>
        <inlineHelpText>Provide Summary of current Business Problem</inlineHelpText>
        <label>Business Problem Summary</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Change_Management_Comments__c</fullName>
        <label>Change Management Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Change_Management_Effort_Score__c</fullName>
        <label>Change Management Effort Score</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Change_Management_Socialization_Effort__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Management_Socialization_Effort__c</fullName>
        <label>Change Management / Socialization Effort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Mgmt_Training_Comms_Required__c</fullName>
        <description>Does the biz requires Change Mgmt Training/Comms ?</description>
        <inlineHelpText>Some request can be enabled outside standard monthly release. Select Yes, if you need the team to hold off on updating production so that you can send Traning/Comms to end users.</inlineHelpText>
        <label>Change Mgmt Training/Comms Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clear_Alignment_with_Geos_or_Functions__c</fullName>
        <description>Promotes unification / alignment with Geos / Functions</description>
        <inlineHelpText>Promotes unification / alignment with Geos / Functions</inlineHelpText>
        <label>Clear Alignment with Geos / Functions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complexity_Justification__c</fullName>
        <label>Complexity Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Complexity_Level_Others__c</fullName>
        <description>if Complexity level is not in the list</description>
        <label>Complexity Level Others</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Complexity_Level__c</fullName>
        <label>Complexity Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>SFDC Run the Business</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance_Information__c</fullName>
        <inlineHelpText>Please provide details for ‘’Compliance’’ related enhancements.</inlineHelpText>
        <label>Compliance Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Direct_Impact_Increased_Sales_Comments__c</fullName>
        <description>Additional Information on Direct impact on Increased Sales</description>
        <label>Direct Impact Increased Sales Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Impact_on_Increased_Sales__c</fullName>
        <label>Direct Impact on Increased Sales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_impact_on_Increased_Sales_Score__c</fullName>
        <label>Direct impact on Increased Sales Score</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Direct_Impact_on_Increased_Sales__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Downstream_Impacts_Comments__c</fullName>
        <label>Downstream Impacts Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Downstream_Impacts_Score__c</fullName>
        <label>Downstream Impacts Score</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Downstream_Impacts__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Downstream_Impacts__c</fullName>
        <label>Downstream Impacts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High (&gt;3 System Impacts)</fullName>
                </value>
                <value>
                    <fullName>Medium (2-3 System Impacts)</fullName>
                </value>
                <value>
                    <fullName>Low (0-1 System Impacts)</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_User_Communication_Date__c</fullName>
        <inlineHelpText>Are training and/or communications required to accompany this stage? If yes, beginning when you will require communication and training support?</inlineHelpText>
        <label>End User Communication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_User_Communication_Required__c</fullName>
        <inlineHelpText>Are training and/or communications required to accompany this stage? If yes, beginning when you will require communication and training support?</inlineHelpText>
        <label>End User Communication Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_User_Training_Date__c</fullName>
        <inlineHelpText>Are training and/or communications required to accompany this stage? If yes, beginning when you will require communication and training support?</inlineHelpText>
        <label>End User Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_User_Training_Required__c</fullName>
        <inlineHelpText>Are training and/or communications required to accompany this stage? If yes, beginning when you will require communication and training support?</inlineHelpText>
        <label>End User Training Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enterprise_XRM_Guidance_Needed__c</fullName>
        <label>Enterprise XRM Guidance Needed</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enterprise_XRM_Recommendation_Details__c</fullName>
        <label>Enterprise XRM Recommendation Details</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enterprise_XRM_Review_Next_Steps__c</fullName>
        <label>Enterprise XRM Review Next Steps</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Delivery_Date__c</fullName>
        <label>Estimated Delivery Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_IT_Effort_Level__c</fullName>
        <description>Estimated IT Effort Level</description>
        <label>Estimated IT Effort Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Release_Date_PMO__c</fullName>
        <description>Approximate date when the work request will be implemented in production.</description>
        <label>Estimated Release Date(PMO)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Release_Date__c</fullName>
        <description>Copy of estimated release date visible to requesters</description>
        <formula>Estimated_Release_Date_PMO__c</formula>
        <label>Estimated Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Manual_Hours_Savings_Quarter__c</fullName>
        <description>How many manual hours will be saved per month/quarter?  Approximately for how many users?</description>
        <inlineHelpText>How many manual hours will be saved per month/quarter?</inlineHelpText>
        <label>Expected Manual Hours Savings/Quarter</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Savings_Quarter__c</fullName>
        <inlineHelpText>How much (dollar value or cost avoidance) will be saved per quarter, due to this enhancement?</inlineHelpText>
        <label>Expected $ Savings/Quarter</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <description>Functional Area</description>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                    <color>#0B6FCE</color>
                    <label>Account Management</label>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                    <color>#78C953</color>
                    <label>Case Management</label>
                </value>
                <value>
                    <fullName>Contact Management</fullName>
                    <color>#E27001</color>
                    <label>Contact Management</label>
                </value>
                <value>
                    <fullName>Lead Management</fullName>
                    <color>#A845DC</color>
                    <label>Lead Management</label>
                </value>
                <value>
                    <fullName>Opportunity Management</fullName>
                    <color>#F3D904</color>
                    <label>Opportunity Management</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#A53711</color>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Partner Management</fullName>
                    <color>#66E9BD</color>
                    <label>Partner Management</label>
                </value>
                <value>
                    <fullName>User Management</fullName>
                    <color>#8F6429</color>
                    <label>User Management</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geo_Priority_Comments__c</fullName>
        <formula>Geo_Priority_PMO_Comments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geo Priority Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Priority_PMO_Comments__c</fullName>
        <label>Geo Priority Comments(PMO)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geo_Priority_PMO__c</fullName>
        <label>Geo Priority(PMO)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geo_Priority__c</fullName>
        <formula>TEXT( Geo_Priority_PMO__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geo Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Agreement_XRM_I_P_Required__c</fullName>
        <description>Copy of work request status visible to requester</description>
        <formula>TEXT(Global_Agreement_XRM_PMO__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Agreement/XRM I/P Required?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Agreement_XRM_PMO__c</fullName>
        <description>Is global consensus required for the work request.</description>
        <label>Global Agreement/XRM(PMO)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global Agreement Required</fullName>
                </value>
                <value>
                    <fullName>XRM Input Required</fullName>
                </value>
                <value>
                    <fullName>Global and XRM Approval Required</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Global Agreement Obtained</fullName>
                </value>
                <value>
                    <fullName>Rejected by Global Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Leads_Recommendation_Details__c</fullName>
        <label>Global Leads Recommendation Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Global_Leads_Recommendation__c</fullName>
        <description>Global Leads Recommendation</description>
        <label>Global Leads Recommendation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Leads_Review_Next_Steps__c</fullName>
        <label>Global Leads Review Next Steps</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Global_Leads_Review_Recommendation__c</fullName>
        <label>Global Leads Review Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BCE Commit</fullName>
                </value>
                <value>
                    <fullName>Commit to IT</fullName>
                </value>
                <value>
                    <fullName>Do Not Commit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Comments__c</fullName>
        <description>IT Comments</description>
        <label>IT Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_Effort_Hours_Spent__c</fullName>
        <label>IT Effort Hours Spent</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_Status__c</fullName>
        <label>IT Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analysis-In Progress</fullName>
                </value>
                <value>
                    <fullName>Development-In Progress</fullName>
                </value>
                <value>
                    <fullName>QA-In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Not Config</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_Sales_Opertions_Productivty_Score__c</fullName>
        <label>Impact SalesOpertions Productivty Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_on_Sales_Operations_Productivty__c</fullName>
        <description>-How many hours will this save a Cisco selling resource per year?
-Direct Sales benefits (i.e. Increased Sales morale)
-Increased Sales productivity; Prevents duplication of efforts
-Expenses saved</description>
        <inlineHelpText>-How many hours will this save a Cisco selling resource per year? 
-Expenses saved
-Direct Sales benefits (i.e. Increased Sales morale) 
-Increased Sales productivity / Prevents duplication of efforts</inlineHelpText>
        <label>Impact on Sales &amp; Operations Productivty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>N/A-Does not apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impacted_Theatres__c</fullName>
        <inlineHelpText>Theaters Impacted (Select all that apply)</inlineHelpText>
        <label>Theatres Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APJC</fullName>
                </value>
                <value>
                    <fullName>EMEAR</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>GET</fullName>
                </value>
                <value>
                    <fullName>GSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impacts_Canadian_Users__c</fullName>
        <description>To stay in compliance with Canada francisation law translation to French is Required.</description>
        <inlineHelpText>To stay in compliance with Canada francisation law translation to French is Required.</inlineHelpText>
        <label>Impacts Canadian Users?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Needed_Comments__c</fullName>
        <label>Integration Needed Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Needed_Score__c</fullName>
        <label>Integration Needed Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Needed__c</fullName>
        <label>Integration Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High (New Tool Integration / Changes to Existing Integration)</fullName>
                </value>
                <value>
                    <fullName>Low (No Integration)</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Justification_For_Go_Live_Date__c</fullName>
        <label>Justification For Go Live Date</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Requirement__c</fullName>
        <description>Required by law in certain geography</description>
        <inlineHelpText>Required by law in certain geography</inlineHelpText>
        <label>Legal Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>N/A-Does not apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Metric_Impacted_Other__c</fullName>
        <inlineHelpText>Describe effect of this request of the Main Metric Impacted selected above (e.g. Client Experience, Business Process Simplification, Compliance). Please use quantitative estimates when possible.</inlineHelpText>
        <label>Main Metric Impacted Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Main_Metric_Impacted__c</fullName>
        <inlineHelpText>Select the main metric impacted by this request.</inlineHelpText>
        <label>Main Metric Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliance (Support the Business)</fullName>
                </value>
                <value>
                    <fullName>Cost Reduction</fullName>
                </value>
                <value>
                    <fullName>N/A-Maintenance LOV Change</fullName>
                </value>
                <value>
                    <fullName>Operational Savings (Productivity Improvement)</fullName>
                </value>
                <value>
                    <fullName>Revenue Improvements (Grow the Business)</fullName>
                </value>
                <value>
                    <fullName>Time Savings (IT, Business Operations, Business)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment_Impacted__c</fullName>
        <inlineHelpText>Market Segment Impacted (Select all that apply)</inlineHelpText>
        <label>Market Segment Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cisco Led</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>Global Enterprise</fullName>
                </value>
                <value>
                    <fullName>Global Service Provider</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Partner Led</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Steps_Due_Date__c</fullName>
        <label>Next Steps Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Owner__c</fullName>
        <label>Next Steps Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Days_to_Deliver__c</fullName>
        <description>Number of days taken to deliver a work request</description>
        <formula>Estimated_Release_Date_PMO__c  - Work_Request_Review_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Days to Deliver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Requirement_Risks_Comments__c</fullName>
        <label>Number of Requirement Risks Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Requirement_Risks_Score__c</fullName>
        <label>Number of Requirement Risks Score</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Number_of_Requirement_Risks_Unknowns__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Requirement_Risks_Unknowns__c</fullName>
        <label>Number of Requirement Risks / Unknowns</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>